atualizações no design

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <section class="container">
-    <h1>Meu Timer</h1>
+    <h1>TIMER</h1>
     <p class="relogio">00:00:00</p>
     <p>
       <button class="iniciar">INICIAR</button>
